--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,16 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
 #spring.devtools.livereload.enabled=true
 
+#?? ? ?? ?? ???
+spring.servlet.multipart.maxFileSize=20MB
+
+#??? ?? ?? ??
+spring.servlet.multipart.maxRequestSize=100MB
+
+#?? ??? ??? ??
+itemImgLocation=C:/shopImg/item
+
+#??? ??? ??
+uploadPath=file:///C:/shopImg/
+
 
