--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,7 @@ itemImgLocation=C:/shopImg/item
 
 uploadPath=file:///C:/shopImg/
 
+#batch size
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
 
